fix: resolvendo problemas do sonar